# room.exe

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  ENTITY_PROTOCOL.md  PERSISTENCE.md  README.md  README_PASTE_HERE.md  benchmark.sh  ci.yml  cli.rs  config.rs  daemon.rs  default.json  development.json  docker-compose.yml  entity.rs  filesystem.rs  lib.rs  main.rs  memory.rs  mod.rs  production.json  release.sh  release.yml  room.rs  room_lifecycle.rs  room_model.rs  security.yml  sqlite.rs
