[package]
name = "backrooms-terminal"
version = "2.1.0"
edition = "2021"
license = "MIT"
description = "Backrooms Terminal: room-scoped entity runner"

[[bin]]
name = "room.exe"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }

rusqlite = { version = "0.31", features = ["bundled"] }
flate2 = "1"
tar = "0.4"

tokio = { version = "1.39", features = ["rt-multi-thread","macros","net","io-util","sync","time"], optional = true }

[features]
default = []
daemon = ["tokio"]

[dev-dependencies]
tempfile = "3"
